{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 6,
  "lineage": "288ffe6c-6484-5052-26ca-5ecf818352b3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:620721315780:vpc/vpc-98dcd4e0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-82fa5cef",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7ef7f606",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-98dcd4e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-44c0353e",
            "owner_id": "620721315780",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:620721315780:loadbalancer/app/terraform-up-and-running/9ae2d4e605128ffc",
            "arn_suffix": "app/terraform-up-and-running/9ae2d4e605128ffc",
            "dns_name": "terraform-up-and-running-76865106.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:620721315780:loadbalancer/app/terraform-up-and-running/9ae2d4e605128ffc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-up-and-running",
            "security_groups": [
              "sg-0c98f9847a1a406d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ccb85c"
              },
              {
                "subnet_id": "subnet-4ca1c434"
              },
              {
                "subnet_id": "subnet-704da15a"
              },
              {
                "subnet_id": "subnet-fbe365b1"
              }
            ],
            "subnets": [
              "subnet-01ccb85c",
              "subnet-4ca1c434",
              "subnet-704da15a",
              "subnet-fbe365b1"
            ],
            "vpc_id": "vpc-98dcd4e0",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "data.aws_subnet_ids.default",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:620721315780:listener/app/terraform-up-and-running/9ae2d4e605128ffc/9f549fec8051b3c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:620721315780:listener/app/terraform-up-and-running/9ae2d4e605128ffc/9f549fec8051b3c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:620721315780:loadbalancer/app/terraform-up-and-running/9ae2d4e605128ffc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.default",
            "module.alb.aws_lb.example",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:620721315780:security-group/sg-0c98f9847a1a406d3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c98f9847a1a406d3",
            "ingress": [],
            "name": "terraform-up-and-running",
            "name_prefix": "",
            "owner_id": "620721315780",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-98dcd4e0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2170832498",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c98f9847a1a406d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3498519170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c98f9847a1a406d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}